# ai-pashu

./: .gitignore  main.py  pyproject.toml  requirements.txt
